Now filters nicely, via clickable charts.